Fix form spacing

--- a/FoodStuffs.Web/ClientApp/src/style/inputs.scss
+++ b/FoodStuffs.Web/ClientApp/src/style/inputs.scss
@@ -68,6 +68,7 @@ input[type="password"], input[type="number"], input[type="text"], input[type="da
     font-family: $font-family;
     font-size: 1em;
     flex: 1;
+    width: auto;
 
     &:focus {
         outline: none;
@@ -77,7 +78,7 @@ input[type="password"], input[type="number"], input[type="text"], input[type="da
 }
 
 textarea {
-    height: 10em;
+    min-height: 8em;
 }
 
 input[type="button"], input[type="submit"], button {
